fix summary apge layout issue

--- a/src/screens/checkout/Checkout.css
+++ b/src/screens/checkout/Checkout.css
@@ -40,8 +40,9 @@
 }
 
 .div-container {
-    margin: 8px;
-    margin-left: 10%;
+  padding-left: 25%;
+    padding-bottom: 5%;
+
 }
 
 .price-container {
@@ -49,14 +50,15 @@
 }
 
 .rupee-container {
-    margin: 8px;
-    margin-left: 24%;
+  padding-left: 25%;
 }
 
 .div-items {
     min-width: 180px;
 }
-
+.div-quantity {
+    padding-left: 2%;
+}
 
 .dispNone {
     display: none;
@@ -81,10 +83,6 @@
 
 .green {
     color: green;
-}
-
-.grid {
-    
 }
 
 .button-container {
